<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  
  <PreferenceCategory
  	android:title="@string/prefGeoCategory" />
  
  <CheckBoxPreference 
  	android:key="@string/prefDefaultClosestKey"
  	android:title="@string/prefDefaultClosestTitle"
  	android:summary="@string/prefDefaultClosestMessage"
  />
  
  <PreferenceCategory
  	android:title="@string/prefFilterCategory" />
  
  <CheckBoxPreference 
  	android:key="@string/prefFilterEnableKey"
  	android:title="@string/prefFilterEnableTitle"
  	android:summary="@string/prefFilterEnableMessage"
  	android:enabled="true"
  />
  
  <com.mbcdev.nextluas.prefs.RedListPreference
    android:defaultValue=""
  	android:key="@string/prefStopListRedKey"
  	android:dependency="@string/prefFilterEnableKey"
    android:title="@string/prefStopListRedTitle"
    android:dialogTitle="@string/prefStopListRedTitle"
    android:summary="@string/prefStopListRedMessage"
    android:enabled="true"
  />
  
  <com.mbcdev.nextluas.prefs.GreenListPreference
    android:defaultValue=""
  	android:key="@string/prefStopListGreenKey"
  	android:dependency="@string/prefFilterEnableKey"
    android:title="@string/prefStopListGreenTitle"
    android:dialogTitle="@string/prefStopListGreenTitle"
    android:summary="@string/prefStopListGreenMessage"
    android:enabled="true"
  />
  
</PreferenceScreen>
